# pymenu-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml
docs/: colors_example.html
docs/superpowers/plans/: 2026-04-12-tui-modernization.md
docs/superpowers/specs/: 2026-04-12-tui-modernization-design.md
example/: actions.py  menu_example.py
examples/: menu_example.py
examples/actions/: actions.py
examples/menus/: colored_menu.json  no_colored_menu.json
pymenu_cli/: __init__.py  app.py  banner.py  classic.py  menu.py  pymenu.py
pymenu_cli/UI/: styles.py
pymenu_cli/models/: menu.py  menu_item.py
pymenu_cli/themes/: __init__.py  dark.tcss  light.tcss
pymenu_cli/ui/: styles.py
pymenu_cli/widgets/: __init__.py  breadcrumb.py  menu_list.py  output_panel.py  search_bar.py  sidebar.py
tests/: test_app.py  test_banner.py  test_breadcrumb.py  test_classic.py  test_menu.py  test_menu_item.py  test_menu_list.py  test_output_panel.py  test_pymenu.py  test_search_bar.py  test_sidebar.py
