[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymenu-cli"
version = "2.0.0"
description = "A simple yet powerful Python library for creating interactive CLI menus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Moraneus", email = "moraneus@gmail.com" }
]
keywords = ["cli", "menu", "tui", "terminal", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textual>=0.50.0",
    "pyfiglet>=1.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "textual-dev>=1.0",
    "pylint>=3.0",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
pymenu-cli = "pymenu_cli.pymenu:main"

[project.urls]
Homepage = "https://github.com/moraneus/pymenu-cli"
Repository = "https://github.com/moraneus/pymenu-cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pymenu_cli"]
omit = ["pymenu_cli/themes/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = ["cyclic-import"]

[dependency-groups]
dev = [
    "build>=1.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["pymenu_cli"]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    "tests/",
    "examples/",
    ".github/",
    ".superpowers/",
]
